Update readme
add config vm args