@@ -1,3 +1,6 @@
 # PapayaDB
-# PapayaDB
-# PapayaDB
+
+Add this line (vm args) to execute serverBdd & server REST
+
+--add-exports java.base/sun.nio.ch=ALL-UNNAMED
+--add-exports java.base/sun.net.dns=ALL-UNNAMED
